1er nuestros juegos
Ahi hice un poco de nuestros juegos falta todavia. veo si puedo serguirlo el finde y si no parece algo me dicen no hay problema

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="">Quienes somos</a></li>
                 <li><a href="">Noticias</a></li>
-                <li><a href="">Nuestros Juegos</a></li>
+                <li><a href="nosotros.html">Nuestros Juegos</a></li>
             </ul>
         </nav>
     </div>
