leve-avance-about-us

--- a/index.html
+++ b/index.html
@@ -44,11 +44,30 @@
           <img src="IMG/Index/wall-world-11ui7.webp" alt="wall-world-11ui7" />
         </div>
         <div class="arrowIcon">
-            <i class="fa-solid fa-arrow-left" id="left"></i>
-            <i class="fa-solid fa-arrow-right" id="right"></i>
+          <i class="fa-solid fa-arrow-left" id="left"></i>
+          <i class="fa-solid fa-arrow-right" id="right"></i>
         </div>
       </div>
-      <div id="sobreNosotros" class="sectionCont"></div>
+      <div id="sobreNosotros" class="sectionCont">
+        <div class="aboutTxt">
+          <h2>Sobre nosotros</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, qui
+            <br />
+            saepe recusandae, ullam molestiae ipsam reprehenderit, voluptatem
+            <br />
+            quidem earum quo aut minus quisquam et at quia officiis ex non Lorem <br>
+            ipsum dolor sit amet consectetur, adipisicing elit. Dicta, ex rem! <br>
+            Dolorem aliquam excepturi et, porro delectus quis dignissimos <br>
+            quaerat eligendi atque commodi officia voluptatem similique, tempora
+            dolorum nobis. Nisi. voluptates.
+          </p>
+        </div>
+        <img
+          src="IMG/Index/javier-martinez-hUD0PUczwJQ-unsplash.jpg"
+          alt="Foto-gamer"
+        />
+      </div>
       <div id="nuestrosJuegos" class="sectionCont"></div>
       <div id="carreras" class="sectionCont"></div>
     </section>
