avance-nuestros-juegos
un pequeño avance de la sección de nuestros juegos o nuestras franquicias, use grid para crearlo

--- a/index.html
+++ b/index.html
@@ -1,79 +1,81 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Styles/normalize.css" />
-    <link rel="stylesheet" href="Styles/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/2c4bf04a81.js"
-      crossorigin="anonymous"
-    ></script>
-    <title>Game Dev Studio</title>
-  </head>
 
-  <body>
-    <header>
-      <div class="logoCont">
-        <img src="IMG/Index/Game dev ARG (3).png" alt="Placeholder" />
-      </div>
-      <div class="navCont">
-        <nav>
-          <ul>
-            <li><a href="">Quienes somos</a></li>
-            <li><a href="">Noticias</a></li>
-            <li><a href="nosotros.html">Nuestros Juegos</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <section>
-      <div id="sliderCont">
-        <div class="sliderInner">
-          <img src="IMG/Index/Cloudpunk-portada.webp" alt="Cloudpunk-portada" />
-          <img
-            src="IMG/Index/sekiro-shadows-die-twice.webp"
-            alt="sekiro-shadows-die-twice"
-          />
-          <img src="IMG/Index/wall-world-11ui7.webp" alt="wall-world-11ui7" />
-        </div>
-        <div class="arrowIcon">
-          <i class="fa-solid fa-arrow-left" id="left"></i>
-          <i class="fa-solid fa-arrow-right" id="right"></i>
-        </div>
-      </div>
-      <div id="sobreNosotros" class="sectionCont">
-        <div class="aboutTxt">
-          <h2>Sobre nosotros</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, qui
-            <br />
-            saepe recusandae, ullam molestiae ipsam reprehenderit, voluptatem
-            <br />
-            quidem earum quo aut minus quisquam et at quia officiis ex non Lorem <br>
-            ipsum dolor sit amet consectetur, adipisicing elit. Dicta, ex rem! <br>
-            Dolorem aliquam excepturi et, porro delectus quis dignissimos <br>
-            quaerat eligendi atque commodi officia voluptatem similique, tempora
-            dolorum nobis. Nisi. voluptates.
-          </p>
-        </div>
-        <img
-          src="IMG/Index/javier-martinez-hUD0PUczwJQ-unsplash.jpg"
-          alt="Foto-gamer"
-        />
-      </div>
-      <div id="nuestrosJuegos" class="sectionCont"></div>
-      <div id="carreras" class="sectionCont"></div>
-    </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="Styles/normalize.css" />
+  <link rel="stylesheet" href="Styles/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/2c4bf04a81.js" crossorigin="anonymous"></script>
+  <title>Game Dev Studio</title>
+</head>
 
-    <footer></footer>
+<body>
+  <header>
+    <div class="logoCont">
+      <img src="IMG/Index/Game dev ARG (3).png" alt="Placeholder" />
+    </div>
+    <div class="navCont">
+      <nav>
+        <ul>
+          <li><a href="">Quienes somos</a></li>
+          <li><a href="">Noticias</a></li>
+          <li><a href="nosotros.html">Nuestros Juegos</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <section>
+    <div id="sliderCont">
+      <div class="sliderInner">
+        <img src="IMG/Index/Cloudpunk-portada.webp" alt="Cloudpunk-portada" />
+        <img src="IMG/Index/sekiro-shadows-die-twice.webp" alt="sekiro-shadows-die-twice" />
+        <img src="IMG/Index/wall-world-11ui7.webp" alt="wall-world-11ui7" />
+      </div>
+      <div class="arrowIcon">
+        <i class="fa-solid fa-arrow-left" id="left"></i>
+        <i class="fa-solid fa-arrow-right" id="right"></i>
+      </div>
+    </div>
+    <div id="sobreNosotros" class="sectionCont">
+      <div class="aboutTxt">
+        <h2>Sobre nosotros</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, qui
+          <br />
+          saepe recusandae, ullam molestiae ipsam reprehenderit, voluptatem
+          <br />
+          quidem earum quo aut minus quisquam et at quia officiis ex non Lorem
+          <br />
+          ipsum dolor sit amet consectetur, adipisicing elit. Dicta, ex rem!
+          <br />
+          Dolorem aliquam excepturi et, porro delectus quis dignissimos <br />
+          quaerat eligendi atque commodi officia voluptatem similique, tempora
+          dolorum nobis. Nisi. voluptates.
+        </p>
+      </div>
+      <img src="IMG/Index/javier-martinez-hUD0PUczwJQ-unsplash.jpg" alt="Foto-gamer" />
+    </div>
+    <div id="nuestrosJuegos" class="sectionCont">
+      <div class="juegosTitle"><h2>Nuestras franquicias</h2></div>
+      <div class="gridCont">
+        <img src="IMG/Index/Assassins-Creed-Symbol.webp" alt="Assassins-Creed-Symbol" class="gridItem item1" />
+        <img src="IMG/Index/Call-of-Duty-logo.webp" alt="Call-of-Duty-logo" class="gridItem item2" />
+        <img src="IMG/Index/fifa23-logo-3.webp" alt="fifa23-logo-3"class="gridItem item3" />
+        <img src="IMG/Index/Minecraft-Logo-20091.webp" alt="Minecraft-Logo-20091" class="gridItem item4" />
+        <img src="IMG/Index/GTA-logo.webp" alt="GTA-logo" class="gridItem item5" />
+        <img src="IMG/Index/SimsLogo.webp"alt="SimsLogo" class="gridItem item6" />
+      </div>
+    </div>
+    <div id="carreras" class="sectionCont"></div>
+  </section>
 
-    <script src="main.js"></script>
-  </body>
+  <footer></footer>
+
+  <script src="main.js"></script>
+</body>
+
 </html>
