--- a/index.html
+++ b/index.html
@@ -131,21 +131,23 @@
     </section>
 
     <footer>
-      <div class="contact-us">
-        <img src="logo_empresa.png" alt="Logo de la empresa">
-        <h2>Contáctanos</h2>
-        <p>correo@empresa.com</p>
-    </div>
-    <div class="connect-with-us">
-      <div class="contact-cont">
-        <h2>Conéctate con nosotros</h2>
-      <ul class="social-icons">
-          <li><a href="#" class="fa fa-linkedin"></a></li>
-          <li><a href="#" class="fa fa-twitter"></a></li>
-          <li><a href="#" class="fa fa-facebook"></a></li>
-      </ul>
+      <div class="container-foot">
+        <div class="contact-us">
+          <img src="logo_empresa.png" alt="Logo de la empresa">
+          <h2>Contáctanos</h2>
+          <p>correo@empresa.com</p>
       </div>
-  </div>
+      <div class="connect-with-us">
+        <div class="contact-cont">
+          <h2>Conéctate con nosotros</h2>
+        <ul class="social-icons">
+            <li><a href="#" class="fa fa-linkedin"></a></li>
+            <li><a href="#" class="fa fa-twitter"></a></li>
+            <li><a href="#" class="fa fa-facebook"></a></li>
+        </ul>
+        </div>
+      </div>
+      </div>
     </footer>
 
     <script src="main.js"></script>
