--- a/index.html
+++ b/index.html
@@ -20,18 +20,15 @@
 
   <body>
     <header>
-      <div class="logoCont">
-        <img src="IMG/Index/Game dev ARG (3).png" alt="Placeholder" />
-      </div>
-      <div class="navCont">
-        <nav>
-          <ul>
-            <li><a href="">Quienes somos</a></li>
-            <li><a href="">Noticias</a></li>
-            <li><a href="nosotros.html">Nuestros Juegos</a></li>
-          </ul>
-        </nav>
-      </div>
+        <img class="logo" src="IMG/Index/Game dev ARG (3).png" alt="Placeholder" />
+        <div class="menu-toggle">&#9776;</div>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li><a href="">Quienes somos</a></li>
+          <li><a href="">Noticias</a></li>
+          <li><a href="nosotros.html">Nuestros Juegos</a></li>
+        </ul>
+      </nav>
     </header>
     <section>
       <div id="sliderCont">
@@ -133,7 +130,7 @@
     <footer>
       <div class="container-foot">
         <div class="contact-us">
-          <img src="logo_empresa.png" alt="Logo de la empresa">
+          <img src="IMG/Index/Game dev ARG (3).png" alt="Logo de la empresa">
           <h2>Contáctanos</h2>
           <p>correo@empresa.com</p>
       </div>
