--- a/Ultimas Noticias.html
+++ b/Ultimas Noticias.html
@@ -31,49 +31,49 @@
         <div class="noticia">
             <h2>"Minecraft: 300 Millones de Bloques, 1 Éxito Inquebrantable"</h2>
             <p>Fecha: 5 de octubre de 2023</p>
-            <img src="imagen1.jpg" alt="Imagen de la Noticia 1" class="imagen-noticia">
+            <img src="Minecraft wallpaper.jpeg" alt="Imagen de la Noticia 1" class="imagen-noticia">
             <p>¡El juego de construcción de bloques más icónico alcanza un nuevo hito! Minecraft supera los 300 millones de copias vendidas en todo el mundo, consolidando su posición como uno de los juegos más populares de todos los tiempos.</p>
         </div>
         <div class="noticia">
             <h2>"Hollow Knight Despierta de las Sombras: ¡Prepárate para la Secuela!"</h2>
             <p>Fecha: 3 de octubre de 2023</p>
-            <img src="imagen2.jpg" alt="Imagen de la Noticia 2" class="imagen-noticia">
+            <img src="Hollow Knight wallpapers.jpeg" alt="Imagen de la Noticia 2" class="imagen-noticia">
             <p>Los fanáticos de la atmósfera oscura y el combate desafiante están de enhorabuena. Team Cherry anuncia una secuela para Hollow Knight que promete llevar la aventura a nuevas profundidades. ¿Estás listo para explorar el vacío una vez más?</p>
         </div>
         <div class="noticia">
             <h2>"Cult of Lamb: Únete a la Secta en el Fin del Mundo"</h2>
             <p>Fecha: 1 de octubre de 2023</p>
-            <img src="imagen3.jpg" alt="Imagen de la Noticia 3" class="imagen-noticia">
+            <img src="cult of lamb.jpeg" alt="Imagen de la Noticia 3" class="imagen-noticia">
             <p>El próximo juego indie que está causando revuelo. Cult of Lamb promete una experiencia única y cautivadora en la que los jugadores liderarán su propia secta en un mundo post-apocalíptico. ¿Te unirás al culto?</p>
         </div>
         <div class="noticia">
             <h2>"RSX6: La Velocidad se Reinventa en una Nueva Era"</h2>
             <p>Fecha: 27 de septiembre de 2023</p>
-            <img src="imagen4.jpg" alt="Imagen de la Noticia 4" class="imagen-noticia">
+            <img src="Rsx6 wallpaper.jpeg" alt="Imagen de la Noticia 4" class="imagen-noticia">
             <p>El regreso triunfal de una franquicia legendaria. RSX6 deslumbra a los fanáticos de la velocidad y la acción con gráficos de vanguardia y una jugabilidad vertiginosa. Prepárate para la carrera de tu vida.</p>
         </div>
         <div class="noticia">
             <h2>"Grand Theft Auto V (GTAV): "GTAV: Los Criminales Regresan con una Sorpresa Explosiva"</h2>
             <p>Fecha: 24 de septiembre de 2023</p>
-            <img src="imagen5.jpg" alt="Imagen de la Noticia 5" class="imagen-noticia">
+            <img src="GTAV wallpaper.jpg" alt="Imagen de la Noticia 5" class="imagen-noticia">
             <p>Rockstar Games anuncia una sorpresa para los jugadores. GTAV recibirá una expansión de historia para un solo jugador, prometiendo aún más caos y diversión en Los Santos. ¿Listo para otro atraco?</p>
         </div>
         <div class="noticia">
             <h2>"Starfield: Explora el Universo y Desvela Secretos Alienígenas"</h2>
             <p>Fecha: 20 de septiembre de 2023</p>
-            <img src="imagen6.jpg" alt="Imagen de la Noticia 6" class="imagen-noticia">
+            <img src="starfield wallpaper.jpeg" alt="Imagen de la Noticia 6" class="imagen-noticia">
             <p>Bethesda revela un nuevo adelanto de su juego espacial altamente anticipado. Starfield ofrece un vistazo a la exploración interestelar y las misteriosas civilizaciones alienígenas que los jugadores encontrarán en su viaje hacia las estrellas.</p>
         </div>
         <div class="noticia">
             <h2>"CSGO2: Apunta y Dispara a una Segunda Ronda de Acción"</h2>
             <p>Fecha: 16 de septiembre de 2023</p>
-            <img src="imagen7.jpg" alt="Imagen de la Noticia 7" class="imagen-noticia">
+            <img src="CSGO2 wallpaper.jpg" alt="Imagen de la Noticia 7" class="imagen-noticia">
             <p>¡El clásico juego de disparos táctico regresa con una secuela! CSGO2 promete nuevas armas, mapas y mecánicas de juego, lo que emociona a la comunidad de jugadores competitivos de todo el mundo.</p>
         </div>
         <div class="noticia">
             <h2>"The Legend of Zelda: La Próxima Aventura de Link despierta la expectativa"</h2>
             <p>Fecha: 10 de septiembre de 2023</p>
-            <img src="imagen8.jpg" alt="Imagen de la Noticia 8" class="imagen-noticia">
+            <img src="Legend of Zelda Wallpaper.jpeg" alt="Imagen de la Noticia 8" class="imagen-noticia">
             <p>Los rumores sobre el próximo título de la serie crecen. Aunque Nintendo se mantiene en silencio, los fanáticos esperan ansiosamente más detalles sobre la próxima aventura de Link en el mundo de Hyrule. ¿Qué sorpresas nos depara esta vez?</p>
         </div>
             <!-- Puedes agregar más noticias aquí -->
