--- a/nosotros.html
+++ b/nosotros.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nuestros Juegos</title>
-    <link rel="stylesheet" href="Styles/styleCuerpo.css">
+    <link rel="stylesheet" href="Styles/normalize.css"/>
+    <link rel="stylesheet" href="Styles/styleCuerpo.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet"
+    />
+    <script
+        src="https://kit.fontawesome.com/2c4bf04a81.js"
+        crossorigin="anonymous"
+    ></script>
 </head>
 <body>
-    <nav>
-        <h1>Nombre Pagina</h1>
-        <ul>
+    <header>
+        <img
+        class="logo"
+        src="IMG/Index/Game dev ARG (3).png"
+        alt="Placeholder"
+        />
+        <div class="menu-toggle">&#9776;</div>
+        <nav class="nav">
+            <ul class="nav-list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#arriba">Nosotros</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-        </ul>
-    </nav>
+            <li><a href="#arriba">Nuestros Juegos</a></li>
+            <li><a href="Ultimas Noticias.html">Noticias</a></li>
+            
+            </ul>
+        </nav>
+    </header>
     <section id="arriba" class="banner-cabecera">
         <div class="contenido">
             <h2>Explora nuestros juegos emocionantes y descubre la diversión.</h2>
@@ -25,39 +44,106 @@
     <section id="juegos">
         <div class="game-container">
             <div class="game">
-                <img src="IMG/1.png" alt="Minecraft">
-                <div class="description">Minecraft es un videojuego tipo sandbox, su traducción literal sería “caja de arena” y es lo que representa la experiencia de juego. Los jugadores pueden modelar el mundo a su gusto, destruir y construir, como si estuviesen jugando en una caja de arena.</div>
+                <img src="IMG/nuestros_juegos/1.png" alt="Minecraft" />
+                <div class="description">
+                    Minecraft es un videojuego tipo sandbox, su traducción literal sería
+                    “caja de arena” y es lo que representa la experiencia de juego. Los
+                    jugadores pueden modelar el mundo a su gusto, destruir y construir,
+                    como si estuviesen jugando en una caja de arena.
+                </div>
             </div>
             <div class="game">
-                <img src="IMG/2.jpg" alt="Hollow Knight">
-                <div class="description">Explora cavernas tortuosas, ciudades antiguas y páramos mortales. Combate contra criaturas corrompidas, haz nuevas amistades con extraños insectos y resuelve los antiguos misterios que yacen en el corazón del reino.</div>
+                <img src="IMG/nuestros_juegos/2.jpg" alt="Hollow Knight" />
+                <div class="description">
+                    Explora cavernas tortuosas, ciudades antiguas y páramos mortales.
+                    Combate contra criaturas corrompidas, haz nuevas amistades con
+                    extraños insectos y resuelve los antiguos misterios que yacen en el
+                    corazón del reino.
+                </div>
             </div>
             <div class="game">
-                <img src="IMG/3.jpg" alt="Cult of Lamb">
-                <div class="description">Empieza tu propia secta en una tierra de falsos profetas, aventúrate a través de las diversas y misteriosas regiones para construir una comunidad fiel de adeptos del bosque, y difunde tu Palabra para convertir tu secta en la única y verdadera.</div>
+                <img src="IMG/nuestros_juegos/3.jpg" alt="Cult of Lamb" />
+                <div class="description">
+                Empieza tu propia secta en una tierra de falsos profetas, aventúrate
+                a través de las diversas y misteriosas regiones para construir una
+                comunidad fiel de adeptos del bosque, y difunde tu Palabra para
+                convertir tu secta en la única y verdadera.
+                </div>
             </div>
             <div class="game">
-                <img src="IMG/4.jpg" alt="RSX6">
-                <div class="description">El juego consiste en partidas de equipos de cinco atacantes contra cinco defensores. Los defensores deben defender un objetivo dentro de una estructura, ya sea un rehén, dos bombas o un contenedor biológico. Si logran defender al objetivo con éxito o eliminan a todos los atacantes, ganan la ronda.</div>
+                <img src="IMG/nuestros_juegos/4.jpg" alt="RSX6" />
+                <div class="description">
+                El juego consiste en partidas de equipos de cinco atacantes contra
+                cinco defensores. Los defensores deben defender un objetivo dentro
+                de una estructura, ya sea un rehén, dos bombas o un contenedor
+                biológico. Si logran defender al objetivo con éxito o eliminan a
+                todos los atacantes, ganan la ronda.
+                </div>
             </div>
             <div class="game">
-                <img src="IMG/5.jpg" alt="gtav">
-                <div class="description">Los Santos, una extensa metrópolis llena de gurús de autoayuda, aspirantes a estrellas y famosos en decadencia tratando de mantenerse a flote en una era de incertidumbre económica y tele por cable barata. En medio de esta confusión, tres criminales muy distintos lo arriesgan todo en una serie de audaces y peligrosos asaltos que podrían solucionarles la vida.</div>
+                <img src="IMG/nuestros_juegos/5.jpg" alt="gtav" />
+                <div class="description">
+                    Los Santos, una extensa metrópolis llena de gurús de autoayuda,
+                    aspirantes a estrellas y famosos en decadencia tratando de
+                    mantenerse a flote en una era de incertidumbre económica y tele por
+                    cable barata. En medio de esta confusión, tres criminales muy
+                    distintos lo arriesgan todo en una serie de audaces y peligrosos
+                    asaltos que podrían solucionarles la vida.
+                </div>
             </div>
             <div class="game">
-                <img src="IMG/6.jpg" alt="Starfield">
-                <div class="description">Es el año 2330 la humanidad ha abandonado la tierra hace cientos de años, el jugador en el papel del Protagonista se embarcara en una aventura a través de los Sistemas Colonizados tras descubrir un extraño objeto en un trabajo de minería recibes contacto de un misterioso grupo llamado Constelación, el ultimo grupo de exploradores espaciales que se embarca mas allá de los sistemas ya explorados, quienes te invitaran a desentrañar el misterio de estos misteriosos artefactos y descubrir: ¿Qué se encuentra mas allá de las estrellas que conocemos?.</div>
+                <img src="IMG/nuestros_juegos/6.jpg" alt="Starfield" />
+                <div class="description">
+                Es el año 2330 la humanidad ha abandonado la tierra hace cientos de
+                años, el jugador en el papel del Protagonista se embarcara en una
+                aventura a través de los Sistemas Colonizados tras descubrir un
+                extraño objeto en un trabajo de minería recibes contacto de un
+                misterioso grupo llamado Constelación, el ultimo grupo de
+                exploradores espaciales que se embarca mas allá de los sistemas ya
+                explorados, quienes te invitaran a desentrañar el misterio de estos
+                misteriosos artefactos y descubrir: ¿Qué se encuentra mas allá de
+                las estrellas que conocemos?.
+                </div>
             </div>
             <div class="game">
-                <img src="IMG/7.jpg" alt="CSGO2">
-                <div class="description">Dos equipos compiten en múltiples rondas con un modo de juego enfocado en objetivos con la misión de ganar suficientes rondas para llevarse la victoria.</div>
+                <img src="IMG/nuestros_juegos/7.jpg" alt="CSGO2" />
+                <div class="description">
+                Dos equipos compiten en múltiples rondas con un modo de juego
+                enfocado en objetivos con la misión de ganar suficientes rondas para
+                llevarse la victoria.
+                </div>
             </div>
             <div class="game">
-                <img src="IMG/8.jpg" alt="The Legend of Zelda">
-                <div class="description">En su cruzada para reunir los elementos de la Trifuerza, su lucha contra el malvado Ganondorf, o intentando salvar a la sensata princesa Zelda, Link demuestra que es un héroe para la historia. Descubre más sobre sus épicas aventuras aquí.</div>
+                <img src="IMG/nuestros_juegos/8.jpg" alt="The Legend of Zelda" />
+                <div class="description">
+                En su cruzada para reunir los elementos de la Trifuerza, su lucha
+                contra el malvado Ganondorf, o intentando salvar a la sensata
+                princesa Zelda, Link demuestra que es un héroe para la historia.
+                Descubre más sobre sus épicas aventuras aquí.
+                </div>
             </div>
             <!-- Agrega más juegos con la misma estructura si es necesario -->
         </div>
     </section>
+    <footer>
+    <div class="container-foot">
+        <div class="contact-us">
+            <img src="IMG/Index/Game dev ARG (3).png" alt="Logo de la empresa">
+            <h2>Contáctanos</h2>
+            <p>correo@empresa.com</p>
+        </div>
+        <div class="connect-with-us">
+            <div class="contact-cont">
+            <h2>Conéctate con nosotros</h2>
+            <ul class="social-icons">
+                <li><a href="#" class="fa fa-linkedin"></a></li>
+                <li><a href="#" class="fa fa-twitter"></a></li>
+                <li><a href="#" class="fa fa-facebook"></a></li>
+            </ul>
+            </div>
+        </div>
+    </div>
+    </footer>
+    <script src="main.js"></script>
 </body>
 </html>
