cambie el nombre del html
a nuestrosJuegos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="nav-list">
           <li><a href="">Quienes somos</a></li>
           <li><a href="">Noticias</a></li>
-          <li><a href="nosotros.html">Nuestros Juegos</a></li>
+          <li><a href="nuestrosJuegos.html">Nuestros Juegos</a></li>
         </ul>
       </nav>
     </header>
