--- a/nuestrosJuegos.html
+++ b/nuestrosJuegos.html
@@ -125,6 +125,14 @@
             <!-- Agrega más juegos con la misma estructura si es necesario -->
         </div>
     </section>
+    <section id="video">
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/4OgoTZXPACo" title="Sekiro: Shadows Die Twice - Official Trailer | E3 2018" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/VVX7DRyjE60" title="ASSASSINS CREED VALHALLA - TRAILER ESPAÑOL" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </section>
     <footer>
     <div class="container-foot">
         <div class="contact-us">
