Corrección de errores ortográficos

--- a/nuestrosJuegos.html
+++ b/nuestrosJuegos.html
@@ -28,7 +28,7 @@
         <nav class="nav">
             <ul class="nav-list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#arriba">Nuestros Juegos</a></li>
+            <li><a href="QS.html">Quienes somos</a></li>
             <li><a href="Ultimas Noticias.html">Noticias</a></li>
             <li><a href="#arriba">Nuestros Juegos</a></li>
             
